--- a/resume_ms.Rmd
+++ b/resume_ms.Rmd
@@ -301,7 +301,9 @@ B.A.  English
 
 Selected Projects {data-icon=clipboard-list}
 --------------------------------------------------------------------------------
- 
+ N/A
+ N/A
+:::concise
 2020
 
 * Built an application in R to show how complex it would be for State or Local government to update their Annual Comprehensive Financial Report.
@@ -312,3 +314,5 @@ Selected Projects {data-icon=clipboard-list}
 
 2021
 * Built a tool in Power BI that allowed a Local government to build a dynamic representation of how the tax payers' money is being spent to allow more transparency and interactivity with the constituents.
+
+:::
